dark mode fix + btn 13

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -107,6 +107,7 @@
 
   .bar {
     background-color: var(--color-rev);
+    will-change: transform;
   }
 
   .bg-bar {
